syntax = "proto3";
option go_package = "chatgpt-crontab/proto";
package chatgpt_crontab;
enum TokenType {
    // 微信公众号
    WECHATOFFICIAL = 0;
    // 企业微信
    WECOM = 1;
}

message TokenRequest {
    TokenType typ = 1;
    string id = 2;
    string app = 3;
}

message TokenResponse{
    string accessToken = 1;
}

service Token {
    rpc GetToken(TokenRequest) returns(TokenResponse) {}
}